# nexus

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEMO-AND-MARKETING.md  Dockerfile  Makefile  README.md  config.toml.example  deploy-afworker.sh  deploy.sh  docker-compose.quickstart.yml  marketing-drafts.md  run-rag  run-rag.sh  run.sh
apps/nex-calc/: Cargo.toml  README.md  run.sh
apps/nex-calc-fihcontract/: Cargo.toml  run.sh
apps/nex-calc-fihcontract/src/: engine.rs  lib.rs  main.rs
apps/nex-calc/src/: engine.rs  hint.rs  lib.rs  main.rs  ops.rs
apps/nex-cf/: Cargo.toml  deploy.sh  wrangler.jsonc
apps/nex-cf/mock/: Cargo.toml
apps/nex-cf/src/: batch_io.rs  cf_io.rs  lib.rs
apps/nex-cf/tests/: document_pipeline.rs
apps/nex-cf/workerd/: config.capnp
apps/nex-spinwasi-ssccsdocs/: Cargo.toml  spin.toml  wasmer.toml
apps/nex-spinwasi-ssccsdocs/.spin/: sqlite_key_value.db
apps/nex-spinwasi-ssccsdocs/src/: batch_io.rs  bm25.rs  kv_io.rs  lib.rs  mem_io.rs  wasmer_io.rs
apps/nex-tagma/: Cargo.toml  README.md  run.sh
apps/nex-tagma/.cargo/: config.toml
apps/nex-tagma/src/: coord.rs  lib.rs  main.rs
apps/nex-tagma/tests/: tagma.rs
apps/nex-wasmer-ssccsdocs/: Cargo.toml  Cargo.toml.bak2  app.yaml  spin.toml  wasmer.toml
apps/nex-wasmer-ssccsdocs/.cargo/: config.toml
apps/nex-wasmer-ssccsdocs/src/: batch_io.rs  bm25.rs  main.rs  wasmer_io.rs
apps/nex-zed/: .env.example  Cargo.toml  README.md  chat.py  nex-zed  nex-zed-server.py  run.sh  terminal.py
apps/nex-zed/acp-bridge/: Cargo.toml  README.md
apps/nex-zed/src/: acp_handlers.rs  config.rs  lib.rs  main.rs  server.rs  session.rs  zed.rs
core/: Cargo.toml  run.sh
core/api/: Cargo.toml
core/api/src/: lib.rs
core/coordinator/blackboard/: Cargo.toml
core/cypher/: Cargo.toml
core/cypher/src/: lib.rs  parser.rs  plan.rs  translate.rs
core/dispatcher/: Cargo.toml
core/dispatcher/src/: eviction.rs  lib.rs  scheduler.rs
core/graph/: Cargo.toml
core/graph/examples/: rust_agent.rs
core/graph/src/: graph_access.rs  graph_blackboard.rs  lib.rs  mock_gateway.rs  petgraph_storage.rs  schema.rs  storage.rs  util.rs  weight.rs
core/graph/tests/: a_stress_parallel.rs  b_stress_sequential.rs  c_full_flow.rs  cold_concurrent.rs  cold_normalized.rs  composite_integration.rs  d_gateway_scenarios.rs  e_transport_scenarios.rs  f_cold_routing.rs  full_flow.rs  h_concurrency.rs  i_research_loop.rs  parallel_stress.rs  scenarios.rs  stress_many_ants.rs  z_scenarios.rs
core/index/: Cargo.toml
core/index/src/: lib.rs
core/model/: Cargo.toml
core/model/src/: blackboard.rs  clock.rs  cold_query.rs  detection.rs  fih.rs  interner.rs  lib.rs
core/nexus/: Cargo.toml
core/nexus/src/: lib.rs
core/process/: Cargo.toml
core/process/src/: error.rs  eviction.rs  lib.rs  scheduler.rs
core/process/tests/: document_scenario.rs  foundational_scenarios.rs  integration.rs  real_world_scenarios.rs
core/sql/: Cargo.toml
core/sql/src/: lib.rs
core/storage-sqlite/: Cargo.toml
core/storage-sqlite/src/: sql_legacy.rs
core/storage-sqlite/tests/: cold_normalized.rs
core/storage/composite/: Cargo.toml
core/storage/duckdb/: Cargo.toml
core/storage/kv-cold/: Cargo.toml
core/storage/petgraph/: Cargo.toml
core/storage/sqlite/: Cargo.toml
core/table/: Cargo.toml
core/table/src/: blackboard.rs  lib.rs  schema.rs  storage.rs  util.rs
core/table/tests/: blackboard.rs  concurrent.rs
ext/storage-duckdb/: Cargo.toml
ext/storage-duckdb/src/: cypher_sql.rs  lib.rs
ext/storage-duckdb/tests/: duckdb_storage.rs
ext/ve-composite/: Cargo.toml
ext/ve-composite/src/: lib.rs  routes.rs
gateway/api/: Cargo.toml
gateway/api/examples/: node_agent.mjs
gateway/api/src/: lib.rs  main.rs  routes.rs  state.rs
gateway/api/tests/: integration.rs  iobuf_gateway_tests.rs
gateway/nex-cf/: Cargo.toml  deploy.sh  wrangler.jsonc
gateway/nex-cf/mock/: Cargo.toml
gateway/nex-cf/src/: batch_io.rs  bindings.rs  cf_io.rs  lib.rs  stores.rs
gateway/nex-cf/tests/: document_pipeline.rs
interface/cypher/: Cargo.toml
interface/cypher/src/: capable.rs  cold_query.rs  lib.rs  parser.rs  plan.rs  query.rs  translate.rs
interface/cypher/tests/: b_stress_sequential.rs  c_full_flow.rs  composite_integration.rs  document_scenario.rs  f_cold_routing.rs  i_research_loop.rs  parser.rs  translate.rs  z_scenarios.rs
nex/: Cargo.toml  README.md
nex-server/server/: Cargo.toml
nex-server/server/src/: handler.rs  main.rs
nex/benches/: bench.rs
nex/src/: gateway_driver.rs  lib.rs  mock_gateway.rs
nex/src/blackboard/: mod.rs
nex/src/contract/: evidence.rs  fih.rs  lifecycle.rs  mod.rs
nex/src/helper/: content.rs
nex/src/io/: file_io.rs  fs_io.rs  mod.rs  sim_io.rs
nex/src/process/: scheduler.rs
nex/src/storage/: contract.rs  fih.rs  mod.rs  native.rs
nex/tests/: a_stress_parallel.rs  blackboard.rs  composite_tests.rs  contract_evidence.rs  contract_fih.rs  contract_gate.rs  contract_hint.rs  contract_integration.rs  contract_lifecycle.rs  cursor_commit_tests.rs  d_gateway_scenarios.rs  e_transport_scenarios.rs  foundational_scenarios.rs  h_concurrency.rs  integration.rs  mock_gateway.rs  petgraph_storage_tests.rs  real_world_scenarios.rs  semantic_scenarios.rs  state_change_detector.rs  tagma_index.rs
nex/tests/common/: mod.rs  semantic.rs  store.rs
nexd/: Cargo.toml  README.md
nexd/examples/: client.py
nexd/src/: config.rs  handler.rs  lib.rs  main.rs  manager.rs  rt.rs  server.rs
nexd/src/daemon/: README.md  config.rs  coord.rs  daemon.rs  daemon_config.rs  daemon_core.rs  error.rs  ipc.rs  lock.rs  metrics.rs  mod.rs  pool.rs  profiling.rs  resources.rs  scheduler.rs  shutdown.rs  signal.rs  subsystem.rs
nexd/tests/: integration.rs  proc_daemon_tests.rs
nexd/tests/common/: mod.rs
playbooks/agents/: Cargo.toml
playbooks/agents/src/: main.rs
storage/composite/: Cargo.toml
storage/composite/src/: async_store.rs  blackboard.rs  cold.rs  lib.rs  store_session.rs
storage/duckdb/: Cargo.toml
storage/duckdb/src/: cypher_sql.rs  (+2 more)
storage/sim/: Cargo.toml
(+486 files in other folders)
