[workspace]
resolver = "2"
members = [
    "model",
    "nex",
    "storage/duckdb",
    "gateway/api",
    "gateway/nex-cf",
    "gateway/nex-cf/mock",
    "gateway/serde-proxy",
    "playbooks/agents",
    "interface/query",
    "interface/cypher",
    "storage/sim",
    "storage/composite",
    "storage/petgraph",
    "apps/nex-zed",
    "apps/nex-zed/acp-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
