[workspace]
resolver = "2"
members = [
    "model",
    "nex",
    "nexd",
    "storage/duckdb",
    "libs/serde-proxy",
    "playbooks/agents",
    "interface/query",
    "interface/cypher",
    "storage/sim",
    "storage/composite",
    "storage/petgraph",
]
exclude = [
    "apps/nex-wasmer-ssccsdocs",
    "apps/nex-spinwasi-ssccsdocs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
