[workspace]
resolver = "2"
members = [
    "model",
    "nex",
    "nex-server/server",
    "nex-server/client",
    "nexd",
    "storage/duckdb",
    "libs/serde-proxy",
    "libs/tagma/sw/rust/core",
    "playbooks/agents",
    "interface/query",
    "interface/cypher",
    "storage/sim",
    "storage/composite",
    "storage/petgraph",
    "apps/nex-calc",
    "apps/nex-tagma",
    ]
exclude = [
    "apps/nex-wasmer-ssccsdocs",
    "apps/nex-spinwasi-ssccsdocs",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tagma-core = { path = "libs/tagma/sw/rust/core" }
petgraph = { version = "0.6", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
