[workspace]
resolver = "2"
members = [
    "model",
    "graph",
    "process",
    "storage/sqlite",
    "storage/duckdb",
    "storage/petgraph",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
