[package]
name = "nex"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cfg-if = "1"
nexus-model = { path = "../model" }
petgraph = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }
futures-executor = "0.3"
nexus-storage-sim = { path = "../storage/sim", optional = true }

[features]
default = []
native = ["nexus-storage-sim"]
cf = ["nexus-storage-sim", "nexus-storage-sim/cf", "native", "dep:worker"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
