[package]
name = "nex"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cfg-if = "1"
nexus-model = { path = "../model" }
nexus-storage-composite = { path = "../storage/composite" }
nexus-storage-petgraph = { path = "../storage/petgraph" }
petgraph = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }
futures-executor = "0.3"
walkdir = "2"

[features]
default = []
cf = ["dep:worker"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
nexus-gateway-serde-proxy = { path = "../gateway/serde-proxy" }
