[package]
name = "nex"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cfg-if = "1"
async-trait = { workspace = true }
nexus-model = { path = "../model" }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }
futures-executor = "0.3"
walkdir = "2"
sha2 = "0.10"
tagma-core = { git = "https://github.com/ssccsorg/syntagma", branch = "main" }

[features]
default = []
cf = ["dep:worker"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.5" }
tempfile = "3"
nexus-gateway-serde-proxy = { path = "../libs/serde-proxy" }
nexus-storage-composite = { path = "../storage/composite" }
nexus-storage-petgraph = { path = "../storage/petgraph" }
ureq = { version = "3", features = ["json"] }
