[package]
name = "nexd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nex = { path = "../nex" }
nexus-model = { path = "../model" }
nexus-storage-composite = { path = "../storage/composite" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
libc = "0.2"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
