[package]
name = "nexus-gateway-nex-cf"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.worker]
binding = "NexusGatewayNexCf"

[dependencies]
worker = { version = "0.8", features = ["queue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
postcard = { version = "1", features = ["alloc"] }
nex = { path = "../../nex" }
nexus-model = { path = "../../model" }

[dev-dependencies]
tempfile = "3"
futures-executor = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }


