[package]
name = "nexus-gateway-wasmer-ssccsdocs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
nex = { path = "../../nex" }
nexus-model = { path = "../../model" }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
postcard = { version = "1", features = ["alloc"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
