[package]
name = "nex-zed"
version = "0.1.0"
edition.workspace = true
license.workspace = true

description = "Helix headless Zed client"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
default = []

[[bin]]
name = "nex-zed"
path = "src/main.rs"
