[package]
name = "nex-zed"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Headless Zed AI agent — REST API server"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["__rustls-tls"] }
futures-util = "0.3"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
anyhow = "1.0.102"
tempfile = "3.27.0"
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
async-stream = "0.3.6"
tokio-stream = "0.1.18"

[features]
default = []

[[bin]]
name = "nex-zed"
path = "src/main.rs"
