[package]
name = "nexus-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../model" }
nexus-storage-petgraph = { path = "../storage/petgraph" }
cyrs-syntax = { git = "https://github.com/phall1/cyrs", package = "cyrs-syntax" }
cyrs-ast    = { git = "https://github.com/phall1/cyrs", package = "cyrs-ast" }
cyrs-hir    = { git = "https://github.com/phall1/cyrs", package = "cyrs-hir" }
cyrs-plan   = { git = "https://github.com/phall1/cyrs", package = "cyrs-plan" }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
