[package]
name = "nexus-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
sha2 = "0.10"

# cold_query, detection, cypher, dual trait signatures use serde_json::Value
# as query/interop types — not part of the core data model.
serde_json.workspace = true
