[package]
name = "nexus"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../model" }
cyrs-syntax = { git = "https://github.com/phall1/cyrs", features = ["serde"] }
cyrs-ast = { git = "https://github.com/phall1/cyrs" }
cyrs-hir = { git = "https://github.com/phall1/cyrs" }
cyrs-plan = { git = "https://github.com/phall1/cyrs" }
petgraph = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
serde = { workspace = true }
serde_json = "1"
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
