[package]
name = "nexus-storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../model" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

