[package]
name = "nexus-table"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../model" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3", features = ["macros", "formatting"] }

[dev-dependencies]
nexus-graph = { path = "../graph" }
tempfile = "3"
