[package]
name = "nexus-storage-duckdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus = { path = "../../nexus" }
nexus-model = { path = "../../model" }
duckdb = { version = "1.105", features = ["bundled", "parquet"] }
serde.workspace = true
serde_json.workspace = true


[dev-dependencies]
tempfile = "3"
