[package]
name = "nexus-ve-composite"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
nexus-model = { path = "../../core/model" }
nexus-storage-composite = { path = "../../core/storage/composite" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
