[package]
name = "nexus-gateway-api"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
nexus-graph = { path = "../../core/graph" }
nexus-storage-petgraph = { path = "../../core/storage/petgraph" }
nexus-storage-sqlite = { path = "../../core/storage/sqlite" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
nexus-model = { path = "../../core/model" }
nexus-storage-composite = { path = "../../core/storage/composite" }
reqwest = { version = "0.12", features = ["json"] }
