[package]
name = "nexus-gateway-nex-cf"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.worker]
binding = "NexusGatewayNexCf"

[dependencies]
worker = "0.8"
serde_json = "1"
nexus-storage-sim = { path = "../../storage/sim", features = ["cf"] }
nexus-model = { path = "../../model" }
