[package]
name = "nexus-gateway-nex-cf"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.worker]
binding = "NexusGatewayNexCf"

[dependencies]
worker = { version = "0.8", features = ["queue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nex = { path = "../../nex" }
nexus-model = { path = "../../model" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }


