[package]
name = "nex-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nex = { path = "../../nex" }
nex-client = { path = "../client" }
nexus-model = { path = "../../model" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
