[package]
name = "nexus-privileged-agent"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
nex = { path = "../../nex" }
nexus-model = { path = "../../model" }
nexus-storage-composite = { path = "../../storage/composite" }
interface-cypher = { path = "../../interface/cypher" }
serde_json = "1"
