[package]
name = "nexus-storage-composite"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cfg-if = "1"
nexus-model = { path = "../../model" }
nexus-storage-petgraph = { path = "../petgraph" }
serde = { workspace = true }
serde_json = "1"
petgraph = { workspace = true }
postcard = { version = "1", features = ["alloc"] }
log = { workspace = true }
