[package]
name = "nexus-storage-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../../model" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
cfg-if = "1"
walkdir = "2"
futures-executor = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
nex = { path = "../../nex" }
serde_json = "1"
