[package]
name = "nexus-storage-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
nexus-model = { path = "../../model" }
nex = { path = "../../nex" }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
cfg-if = "1"
walkdir = "2"
futures-executor = "0.3"
worker = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[features]
default = []
cf = ["worker"]
