[package]
name = "nex-cf-mock"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace]

[dependencies]
nex = { path = "../../../nex" }
nexus-model = { path = "../../../model" }
nexus-gateway-nex-cf = { path = ".." }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[package.metadata.worker]
binding = "NexCfMockServer"
